dung check sdt quen pass

--- a/app/src/main/res/layout/activity_xac_thuc_sdt_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_xac_thuc_sdt_quen_mat_khau.xml
@@ -82,36 +82,42 @@
                 android:id="@+id/edt_fogot_verify_1"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:maxLength="1"
                 />
             <EditText
                 android:backgroundTint="@color/black"
                 android:id="@+id/edt_fogot_verify_2"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:maxLength="1"
                 />
             <EditText
                 android:backgroundTint="@color/black"
                 android:id="@+id/edt_fogot_verify_3"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:maxLength="1"
                 />
             <EditText
                 android:backgroundTint="@color/black"
                 android:id="@+id/edt_fogot_verify_4"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:maxLength="1"
                 />
             <EditText
                 android:backgroundTint="@color/black"
                 android:id="@+id/edt_fogot_verify_5"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:maxLength="1"
                 />
             <EditText
                 android:backgroundTint="@color/black"
                 android:id="@+id/edt_fogot_verify_6"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:maxLength="1"
                 />
         </LinearLayout>
         <LinearLayout
@@ -129,6 +135,7 @@
                 android:textSize="16dp"
                 />
             <TextView
+                android:id="@+id/btn_thulai_xacthuc"
                 android:fontFamily="@font/robotoregular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
