--- a/app/src/main/res/layout/activity_verifi.xml
+++ b/app/src/main/res/layout/activity_verifi.xml
@@ -82,6 +82,7 @@
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 android:maxLength="1"
+                android:inputType="number"
                 />
             <EditText
                 android:backgroundTint="@color/black"
@@ -89,6 +90,7 @@
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 android:maxLength="1"
+                android:inputType="number"
                 />
             <EditText
                 android:backgroundTint="@color/black"
@@ -96,6 +98,7 @@
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 android:maxLength="1"
+                android:inputType="number"
                 />
             <EditText
                 android:backgroundTint="@color/black"
@@ -103,6 +106,7 @@
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 android:maxLength="1"
+                android:inputType="number"
                 />
             <EditText
                 android:backgroundTint="@color/black"
@@ -110,6 +114,7 @@
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 android:maxLength="1"
+                android:inputType="number"
                 />
             <EditText
                 android:backgroundTint="@color/black"
@@ -117,6 +122,7 @@
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 android:maxLength="1"
+                android:inputType="number"
                 />
         </LinearLayout>
         <LinearLayout
