--- a/app/src/main/res/layout/activity_xac_thuc_sdt_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_xac_thuc_sdt_quen_mat_khau.xml
@@ -82,6 +82,7 @@
                 android:id="@+id/edt_fogot_verify_1"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:maxLength="1"
                 />
             <EditText
@@ -89,6 +90,7 @@
                 android:id="@+id/edt_fogot_verify_2"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:maxLength="1"
                 />
             <EditText
@@ -96,6 +98,7 @@
                 android:id="@+id/edt_fogot_verify_3"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:maxLength="1"
                 />
             <EditText
@@ -103,6 +106,7 @@
                 android:id="@+id/edt_fogot_verify_4"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:maxLength="1"
                 />
             <EditText
@@ -110,6 +114,7 @@
                 android:id="@+id/edt_fogot_verify_5"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:maxLength="1"
                 />
             <EditText
@@ -117,6 +122,7 @@
                 android:id="@+id/edt_fogot_verify_6"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:maxLength="1"
                 />
         </LinearLayout>
