--- a/app/src/main/res/layout/activity_login_2.xml
+++ b/app/src/main/res/layout/activity_login_2.xml
@@ -18,11 +18,11 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/img_logo"
-                android:layout_width="130dp"
+                android:layout_width="125dp"
                 android:layout_height="130dp"
-                android:layout_marginTop="13dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_logo"
+                android:layout_marginTop="13dp"
+                android:src="@drawable/logo2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
