--- a/app/src/main/res/layout/activity_accout.xml
+++ b/app/src/main/res/layout/activity_accout.xml
@@ -57,7 +57,7 @@
                 android:layout_marginTop="-95dp"
                 android:background="@color/white"
                 android:id="@+id/img_account_avat"
-                android:src="@drawable/ic_logo"
+                android:src="@drawable/logo2"
                 app:shapeAppearanceOverlay="@style/cilcle" />
 
             <LinearLayout
