--- a/app/src/main/res/layout/activity_thongt_tin_ho_tro_kh.xml
+++ b/app/src/main/res/layout/activity_thongt_tin_ho_tro_kh.xml
@@ -28,7 +28,7 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center"
 
-                android:src="@drawable/ic_logo"
+                android:src="@drawable/logo2"
                 android:layout_marginLeft="10dp"/>
             <TextView
                 android:layout_marginLeft="17dp"
