dung fix repass

--- a/app/src/main/res/layout/activity_datlich.xml
+++ b/app/src/main/res/layout/activity_datlich.xml
@@ -324,9 +324,10 @@
                     android:id="@+id/edt_luuy_order"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="15dp"
+                    android:padding="30dp"
                     android:background="@null"
                     android:gravity="top"
+                    android:layout_marginTop="10dp"
                     android:hint="vd:gội đầu nhẹ nhàng hơn"
                     android:inputType="textMultiLine"
                     android:overScrollMode="always"
