--- a/app/src/main/res/layout/activity_doi_mat_khau_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_doi_mat_khau_quen_mat_khau.xml
@@ -18,13 +18,13 @@
             >
 
 
-            <androidx.appcompat.widget.AppCompatImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_marginTop="50dp"
                 android:layout_marginHorizontal="147dp"
                 android:id="@+id/img_logo"
                 android:layout_width="match_parent"
                 android:layout_height="109dp"
-                android:src="@drawable/ic_logo"
+                android:src="@drawable/logo2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -47,10 +47,12 @@
                 android:id="@+id/tv_sign_in"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/robotoregular"
-                android:text="Đổi mật khẩu  "
+                android:text="Xác Nhận  "
                 android:textColor="#666C1C"
+
                 android:textSize="45dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -116,6 +118,29 @@
                         />
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:gravity="right"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="50dp">
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Bạn muốn Đăng Nhập?"
+                    android:layout_marginTop="30dp"/>
+                <TextView
+
+                    android:id="@+id/tv_intent_login"
+                    android:textColor="#C138D8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Đăng Nhập"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginTop="30dp"/>
+            </LinearLayout>
+
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_fogot_repass"
