--- a/app/src/main/res/layout/activity_datlich.xml
+++ b/app/src/main/res/layout/activity_datlich.xml
@@ -326,6 +326,7 @@
                     android:layout_height="match_parent"
                     android:padding="30dp"
                     android:background="@null"
+                    android:maxLength="50"
                     android:gravity="top"
                     android:layout_marginTop="10dp"
                     android:hint="vd:gội đầu nhẹ nhàng hơn"
