--- a/app/src/main/res/layout/activity_doi_mat_khau_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_doi_mat_khau_quen_mat_khau.xml
@@ -32,7 +32,7 @@
             <TextView
                 android:id="@+id/tv_hair_salon"
                 android:layout_marginTop="11dp"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Hair Salon"
                 android:textColor="#8D12B8"
@@ -45,9 +45,9 @@
 
             <TextView
                 android:id="@+id/tv_sign_in"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:gravity="center"
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/robotoregular"
                 android:text="Xác Nhận  "
