--- a/app/src/main/res/layout/activity_doi_mat_khau_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_doi_mat_khau_quen_mat_khau.xml
@@ -25,6 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="109dp"
                 android:src="@drawable/logo2"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +35,7 @@
                 android:layout_marginTop="11dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Hair Salon"
+                android:text=""
                 android:textColor="#8D12B8"
                 android:textSize="20dp"
                 android:layout_marginHorizontal="147dp"
@@ -119,16 +120,15 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.cardview.widget.CardView>
             <LinearLayout
-                android:gravity="right"
+                android:gravity="center"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
-                android:layout_height="50dp">
+                android:layout_height="100dp">
                 <TextView
-
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Bạn muốn Đăng Nhập?"
-                    android:layout_marginTop="30dp"/>
+                    android:layout_marginTop="10dp"/>
                 <TextView
 
                     android:id="@+id/tv_intent_login"
@@ -138,7 +138,7 @@
                     android:text="Đăng Nhập"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="30dp"
-                    android:layout_marginTop="30dp"/>
+                    android:layout_marginTop="10dp"/>
             </LinearLayout>
 
 
