--- a/app/src/main/res/layout/custom_text_dichvu.xml
+++ b/app/src/main/res/layout/custom_text_dichvu.xml
@@ -5,18 +5,19 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_border_text">
 
         <TextView
             android:id="@+id/tv_text"
             android:textColor="@color/black"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto_light"
             android:layout_marginStart="10dp"
             android:padding="3dp"
+            android:layout_margin="5dp"
             android:text="Bạn chọn 100k dịch vụ"
             android:textSize="14sp" />
     </LinearLayout>
