--- a/app/src/main/res/layout/activity_verifi.xml
+++ b/app/src/main/res/layout/activity_verifi.xml
@@ -154,8 +154,9 @@
             android:layout_marginTop="80dp"
             android:layout_width="215dp"
             android:layout_height="55dp"
+            android:layout_gravity="center"
             android:layout_marginHorizontal="78dp"
-            android:text="Thay đổi "
+            android:text="Tiếp tục "
             android:textSize="24dp"
             android:fontFamily="@font/robotomedium"
             android:textColor="#ffff"
