--- a/app/src/main/res/layout/activity_datlich.xml
+++ b/app/src/main/res/layout/activity_datlich.xml
@@ -378,16 +378,16 @@
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="24sp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="15dp"
+
         android:fontFamily="@font/robotolight"
         android:gravity="center"
-        android:text="Cắt xong trả tiền, hủy lịch không sao"
+        android:text="Cắt xong trả tiền,hủy lịch không sao."
         android:textColor="@color/black"
         android:textSize="14sp" />
+
 
 </LinearLayout>
