--- a/app/src/main/res/layout/activity_detail_service.xml
+++ b/app/src/main/res/layout/activity_detail_service.xml
@@ -15,6 +15,8 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/back"
             android:id="@+id/btn_back_detail_service"/>
         <TextView
