--- a/app/src/main/res/layout/activity_login_2.xml
+++ b/app/src/main/res/layout/activity_login_2.xml
@@ -64,6 +64,7 @@
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:passwordToggleEnabled="true"
                 android:layout_width="match_parent"
                 android:layout_height="58dp"
                 android:hint="Mật khẩu "
@@ -82,6 +83,7 @@
                     android:layout_height="match_parent"
                     android:fontFamily="@font/roboto_regular"
                     android:inputType="textPassword"
+
                     android:textSize="18sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
